syntax = "proto3";

message player_login_response {
	string key = 1;
	uint32 result = 2;
	string gate_addr = 3;
}